<resources>
    <string name="app_name">FinalProject</string>
    <string name="user_name">Username :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="confirm_to_exit">Confirm to exit?</string>
    <string name="NOTICE">NOTICE</string>
    <string name="Confirm">Confirm</string>
    <string name="location1">1</string>
    <string name="location2">2</string>
    <string name="location3">3</string>
    <string name="location4">4</string>
    <string name="location5">5</string>
    <string name="DropCard">Drop Card</string>
    <string name="Go">Go</string>
</resources>
